# MidLang

./: QUICKSTART.md  README.md
cpp/Stage1/: AST.h  CMakeLists.txt  Evaluator.cpp  Evaluator.h  Lexer.cpp  Parser.cpp  Parser.h  README.md  Token.h  main.cpp
cpp/Stage2/: AST.h  CMakeLists.txt  Evaluator.cpp  Evaluator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Token.h  Value.h  main.cpp
cpp/Stage3/: CMakeLists.txt  Evaluator.h  main.cpp
cpp/Stage4/: AST.h  CMakeLists.txt  main.cpp
csharp/Stage1/: AST.cs  Evaluator.cs  Lexer.cs  MidLang.Stage1.csproj  Parser.cs  Program.cs  README.md  Token.cs
csharp/Stage2/: AST.cs  Evaluator.cs  Lexer.cs  MidLang.Stage2.csproj  Parser.cs  Program.cs  README.md  Token.cs
csharp/Stage3/: AST.cs  Evaluator.cs  Lexer.cs  MidLang.Stage3.csproj  Parser.cs  Program.cs  Token.cs
csharp/Stage4/: AST.cs  Evaluator.cs  Lexer.cs  MidLang.Stage4.csproj  Parser.cs  Program.cs  Token.cs
docs/: Architecture.md  EBNF.md  Stage1_Guide.md
examples/: stage1_example1.mid  stage1_example2.mid  stage1_example3.mid  stage1_example4.mid  stage2_example1.mid  stage2_example2.mid  stage2_example3.mid  stage2_example4.mid  stage3_example1.mid  stage3_example2.mid  stage3_example3.mid  stage3_example4.mid  stage4_example1.mid  stage4_example2.mid  stage4_example3.mid
